<resources>
    <string name="app_name"></string>

    <!-- Buttons text -->
    <string name="login">LOGIN</string>
    <string name="createAccount">CREATE ACCOUNT</string>
    <string name="save">SAVE</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>

    <!-- Screen elements -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="noAccount">No account yet? Create one</string>
    <string name="name">Name</string>
    <string name="lable">Lable:</string>
    <string name="description">Description:</string>
    <string name="cost">Cost:</string>
    <string name="dates">Dates:</string>
    <string name="search_hint">Search</string>
    <string name="but_done">Done</string>
    <string name="enter_dates">Click to select dates</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dish"></string>
    <string name="title_activity_list_dish"></string>
    <string name="title_activity_searchable">searchableActivity</string>
    <string name="title_activity_add_dessert">AddDessertActivity</string>
    <string name="title_activity_signup"></string>
    <string name="title_tab_start_date">Start date</string>
    <string name="title_tab_end_date">End date</string>


    <!--Messages-->
    <string name="signupUsernameError">Username already taken</string>
    <string name="signupMailError">Mail used in different account</string>
    <string name="loginError">Username or Password incorrect</string>
    <string name="updateSuccessfuly">Dessert updated successfully! </string>
    <string name="deleteSuccessfuly">Dessert deleted successfully! </string>
    <string name="errorOccure">An error has occured, please try again</string>
    <string name="errorImage">Error processing image</string>
    <string name="emptyField">Required field</string>

    <!-- Dialogs -->
    <string name="uploadOptionsTitle">"Upload Pictures Option</string>
    <string name="uploadOptionsQuestion">How do you want to set your picture?</string>
    <string name="uploadGalleryOption">Gallery</string>
    <string name="uploadCameraOption">Camera</string>
    <string name="deleteTitle">Delete dessert</string>
    <string name="deleteQuestion">Are you sure you want to delete?</string>
    <string name="deleteOK">OK</string>
    <string name="deleteCancle">Cancle</string>

    <!-- Suffix -->
    <string name="jpg">.jpg</string>
    <string name="provider">.provider</string>
</resources>
